--- a/src/main/resources/templates/lista_productos.html
+++ b/src/main/resources/templates/lista_productos.html
@@ -7,14 +7,24 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h2>Lista de Productos</h2>
+		<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+            <h2>Lista de Productos</h2>
 
-        <div th:if="${error}" class="alert alert-danger" role="alert">
-            <span th:text="${error}"></span>
-        </div>
-        
-        <a th:href="@{/registrar_producto}" class="btn btn-primary mb-3">Registrar</a>
+            <div th:if="${error}" class="alert alert-danger" role="alert">
+                <span th:text="${error}"></span>
+            </div>
+            
+            <a th:href="@{/registrar_producto}" class="btn btn-primary mb-3">Registrar</a>
+			<div class="form-inline my-2 my-lg-0 ml-auto">
+			    <img th:src="${'/usuario_foto/' + foto}" alt="Profile" class="profile-pic" style ="width : 30px;">
+			    <a class="btn btn-outline-danger ml-2" th:href="@{/logout}" role="button">Logout</a>
+			    <a class="btn btn-link" data-toggle="modal" data-target="#exampleModal">
+		<!-- Botón para generar PDF -->
+		<div class="text-right mb-3">
+		    <a target="_blank" th:href="@{/generar_pdf}" class="btn btn-info">Generar PDF</a>
+		</div>
 
+</nav>
         <table class="table table-bordered table-striped">
             <thead>
                 <tr>
@@ -28,22 +38,23 @@
             </thead>
             <tbody>
                 <tr th:each="producto : ${listaprod}">
-                    <td th:text="${producto.idProducto}"></td>
+                    <td th:text="${producto.id}"></td>
                     <td th:text="${producto.nombreProducto}"></td>
                     <td th:text="${producto.precio}"></td>
-                    <td th:text="${producto.stock}"></td> 
+                    <td th:text="${producto.stock}"></td>
                     <td th:text="${producto.categoriaEntity.nombreCat}"></td>
                     <td>
                         <div class="d-flex">
-                            <a th:href="@{/detalle_producto/{id}(id=${producto.idProducto})}" class="btn btn-info me-2">Ver</a>
-                            <a th:href="@{/editar_producto/{id}(id=${producto.idProducto})}" class="btn btn-warning">Editar</a>
-                            <a th:href="@{/delete/{id}(id=${producto.idProducto})}" class="btn btn-danger">Eliminar</a>
+                            <a th:href="@{/detalle_producto/{id}(id=${producto.id})}" class="btn btn-info me-2">Ver</a>
+                            <a th:href="@{/editar_producto/{id}(id=${producto.id})}" class="btn btn-warning">Editar</a>
+                            <a th:href="@{/delete/{id}(id=${producto.id})}" class="btn btn-danger">Eliminar</a>
                         </div>
                     </td> 
                 </tr> 
             </tbody>  
         </table> 
     </div>
+
     <script src="/js/bootstrap.bundle.min.js"></script> 
 </body> 
 </html>
