--- a/src/main/resources/templates/registrar_producto.html
+++ b/src/main/resources/templates/registrar_producto.html
@@ -2,34 +2,34 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Registrar Empleado</title>
-	<link rel="stylesheet" href="/css/bootstrap.min.css"></head></head>
+    <title>Registrar Producto</title>
+	<link rel="stylesheet" href="/css/bootstrap.min.css">
+</head>
 <body>
     <div class="container mt-5">
-        <h2>Registrar Empleado</h2>
+        <h2>Registrar Producto</h2>
         <form th:action="@{/registrar_producto}" th:object="${producto}" method="post" class="mt-4">
-       		<div class="form-group">
-				<label for="dni">Nombre del producto:</label>
-				    <input type="text" th:field="*{nombreProducto}" id="nombreProducto"  />
+            <div class="form-group">
+                <label for="nombreProducto">Nombre del producto:</label>
+                <input type="text" th:field="*{nombreProducto}" id="nombreProducto" required class="form-control" />
             </div>
             <div class="form-group">
-				<label for="codAlumno">Precio:</label>
-				    <input type="number" th:field="*{precio}" id="precio" />
+                <label for="precio">Precio:</label>
+                <input type="number" th:field="*{precio}" id="precio" required step="0.01" class="form-control" />
             </div>
             <div class="form-group">
-				<label for="nombres">Stock</label>
-				    <input type="text" th:field="*{Stock}" id="Stock" required/>
+                <label for="stock">Stock:</label>
+                <input type="number" th:field="*{stock}" id="stock" required class="form-control" />
             </div>
-			<div>
-				<select th:field="*{categoriaEntity}" class="form-control" id="categoriaEntity" required>
-							    <option th:each="categoria : ${listaCategoria}" 
-							            th:value="${categoria.catId}" 
-							            th:text="${categoria.nombreCat}">
-							    </option>
-							</select>	
-			</div>
-
-
+            <div class="form-group">
+                <label for="categoriaEntity">Categoría:</label>
+                <select th:field="*{categoriaEntity}" class="form-control" id="categoriaEntity" required>
+                    <option th:each="categoria : ${listaCategoria}" 
+                            th:value="${categoria.catId}" 
+                            th:text="${categoria.nombreCat}">
+                    </option>
+                </select>	
+            </div>
             <button type="submit" class="btn btn-primary">Registrar</button>
         </form>
     </div>
