--- a/src/main/resources/templates/registrar_producto.html
+++ b/src/main/resources/templates/registrar_producto.html
@@ -31,6 +31,7 @@
                 </select>	
             </div>
             <button type="submit" class="btn btn-primary">Registrar</button>
+			<a th:href="@{/lista}" class="btn btn-secondary">Regresar</a>
         </form>
     </div>
     <script src="/js/bootstrap.bundle.min.js"></script>
