--- a/src/main/resources/templates/template_pdf.html
+++ b/src/main/resources/templates/template_pdf.html
@@ -53,7 +53,7 @@
 <header>
     <img src="https://campusvirtualperu.com/wp-content/uploads/2023/11/logo_cibertec_fondo_blanco_low.jpg" alt="Company Logo">
     <div class="company-info">
-        <h2>Cibertec</h2>
+        <h1>Lista de Productos</h1>
     </div>
 </header>
 
@@ -77,6 +77,7 @@
 	                <td th:text="${producto.nombreProducto}"></td>
 	                <td th:text="${producto.precio}"></td>
 	                <td th:text="${producto.stock}"></td>
+					<td th:text="${producto.categoriaEntity.nombreCat}"></td>
 	            </tr>
 	        </tbody>
 </table>
