--- a/src/main/resources/templates/detalle_producto.html
+++ b/src/main/resources/templates/detalle_producto.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <div class="container">
-        <h2>Detalles del Producto</h2>
+		<div class="d-flex justify-content-between align-items-center mb-4">
+				                <h2 class="display-4">Detalle del producto</h2>
+				                <div class="d-flex align-items-center">		                    
+				                    <div>
+				                        <a class="btn btn-warning" th:href="@{/logout}" role="button">Cerrar sesión</a>
+				                    </div>
+				                </div>
+				            </div>
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title" th:text="'Nombre: ' + ${producto.nombreProducto}">Nombre del Producto</h5>
