--- a/src/main/resources/templates/editar_producto.html
+++ b/src/main/resources/templates/editar_producto.html
@@ -8,7 +8,14 @@
 </head>
 <body>
 <div class="container">
-    <h2>Editar Producto</h2>
+	<div class="d-flex justify-content-between align-items-center mb-4">
+			                <h2 class="display-4">Editar Producto</h2>
+			                <div class="d-flex align-items-center">		                    
+			                    <div>
+			                        <a class="btn btn-warning" th:href="@{/logout}" role="button">Cerrar sesión</a>
+			                    </div>
+			                </div>
+			            </div>
     <form th:action="@{/editar_producto/{id}(id=${producto.id})}" th:object="${producto}" method="post"> <!-- Cambiado idProducto por id -->
         <div class="form-group">
             <label for="nombreProducto">Nombre del Producto:</label>
