--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,9 +7,11 @@
 </head>
 <body class="bg-light d-flex justify-content-center align-items-center vh-100">
 <div class="card shadow-sm p-4">
-  <div th:if="${loginInvalido}" class="alert alert-danger" role="alert">
-    <span th:text="${loginInvalido}"></span>
-  </div>
+	<div class="d-flex justify-content-center">
+	    <div th:if="${loginInvalido}" class="alert alert-danger text-center" role="alert">
+	        <span th:text="${loginInvalido}"></span>
+	    </div>
+	</div>
   <h2 class="card-title text-center mb-4">Inicio de Sesión</h2>
   <form th:action="@{/login}" method="post" th:object="${usuario}">
     <div class="form-group">
